[package]
name = "enhash"
version = "0.1.0"
edition = "2018"
authors = ["raakhul"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
urlencoding = "1.0.0"
ascii_converter = "0.1.0"
hex = "0.4.3"
htmlescape = "0.3.1"
md5 = "0.7.0"
sha2 = "0.9.6"
sha3 = "0.9.1"
gost94 = "0.9.1"
bitflags = "=1.0.4"
clap = "2.33.2"
structopt = "0.3.23"
digest = "0.9.0"